--- a/main.html
+++ b/main.html
@@ -20,10 +20,10 @@
 	    </div>
 	   
 	    <div>
-	      <label for="">Gender*</label>
-            <input type="radio" name="gender" id="gender_m" value="male" required>
+	      <label for="gender">Gender*</label>
+            <input type="radio" name="gender" id="gender" value="male" required>
             <label for="gender_m">Male</label>
-            <input type="radio" name="gender" id="gender_f" value="female" required>
+            <input type="radio" name="gender" id="gender" value="female" required>
 			<label for="gender_f">Female</label>
 	    </div>
 	    
